--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "build": "vite build",
   "lint": "eslint .",
   "preview": "vite preview",
-  "start": "vite preview"
+  "start": "vite preview --port 8080"
 },
 
   "dependencies": {
